/*
 * Copyright (c) 2021-present,  NovaChat-Engine.
 *  All rights reserved.
 *
 *
 * @Author: Coder (coderxw@gmail.com)
 * @Time : 2021/04/13 16:46
 * @File :
 * @Desc :
 *
 */

syntax = "proto3";

package data_setting;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = true;

option go_package = "data_setting";

message NotifySetting {
	option (gogoproto.goproto_sizecache) = false;
	option (gogoproto.goproto_unkeyed) = false;
	option (gogoproto.goproto_unrecognized) = false;

	bool show_previews 	= 1 [(gogoproto.moretags) = "bson:\"show_previews\""];
	bool silent 				= 2 [(gogoproto.moretags) = "bson:\"silent\""];
	int32 mute_until 		= 3 [(gogoproto.moretags) = "bson:\"mute_until\""];
	string sound 				= 4 [(gogoproto.moretags) = "bson:\"sound\""];
}
